--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -1,5 +1,10 @@
 \documentclass{bmvc2k}
 
+%% Faster LaTeX compilation time, bigger file.
+%% TODO: Comment out for submission/final version.
+\pdfcompresslevel=0
+\pdfobjcompresslevel=0
+
 %% Enter your paper number here for the review copy
 \bmvcreviewcopy{298}
 
