--- a/doc/paper_draft/bmvc_review.tex
+++ b/doc/paper_draft/bmvc_review.tex
@@ -55,10 +55,10 @@
 %\usepackage{amsfonts}
 %\usepackage{amsmath}
 %\usepackage{amssymb}
+\usepackage{enumitem}
 \usepackage{booktabs}
 \usepackage{multirow}
 \usepackage{tikz,siunitx,mwe}
-%\usepackage{multirow}
 %\usepackage{url}
 \usepackage{doi}
 \usepackage[nameinlink,capitalise,noabbrev]{cleveref}
