improve ico weight blender

--- a/doc/paper_draft/sections/4-result.tex
+++ b/doc/paper_draft/sections/4-result.tex
@@ -110,8 +110,9 @@ The error in spherical coordinate shown as \cref{fig:exp:quality}.
 		& RAFT & - & -  & - & - & -& - \\ 
 		& Our & - & -  & - & - & -& - \\ 
 		\hline
-		\multirow{4}{*}{Replica(All)} & PWCNet & - & -  & - & - & - & - \\
-		& RAFT & 20.204 & 0.2807  & 72.53  & 0.05648 & 0.1509  & 0.3517 \\
+		\multirow{4}{*}{Replica(All)} 
+		& PWCNet & 18.95 & 0.2866  & 67.92 & 0.06822 & 0.1463 & 0.4062 \\
+		& RAFT & 20.20 & 0.2807  & 72.53  & 0.05648 & 0.1509  & 0.3517 \\
 		& DIS  & 25.74  & 0.3045  & 79.94  & 0.08347 & 0.1797  & 0.4127 \\
 		& Our  & 7.524  & 0.2129  &  42.94 & 0.01161 & 0.06967 & 0.02741 \\
 		\hline
@@ -119,24 +120,24 @@ The error in spherical coordinate shown as \cref{fig:exp:quality}.
 \end{table}
 
 
-\begin{table}[h!]
-	\centering
-	\caption{\label{fig:exp:warpingerrorquality}%
-		Result of optical flow warped image error on Replica and Omniphoto dataset.}
-	\begin{tabular}{c c c c c c c c}
-		\hline
-		Dataset &  Method & ${RMS}$ & $SSIM$ & $SRMS$ & $SSSIM$ \\
-		\hline
-		\multirow{3}{*}{Replica} & PWCNet & - & -  & - & - \\ 
-		& RAFT & - & -  & - & - \\ 
-		& Our & - & -  & - & -  \\ 
-		\hline
-		\multirow{3}{*}{OmniPhoto} & PWCNet & - & -  & - & - \\ 
-		& RAFT & - & -  & - & - \\ 
-		& Our & - & -  & - & - \\ 
-		\hline
-	\end{tabular}
-\end{table}
+%\begin{table}[h!]
+%	\centering
+%	\caption{\label{fig:exp:warpingerrorquality}%
+%		Result of optical flow warped image error on Replica and Omniphoto dataset.}
+%	\begin{tabular}{c c c c c c c c}
+%		\hline
+%		Dataset &  Method & ${RMS}$ & $SSIM$ & $SRMS$ & $SSSIM$ \\
+%		\hline
+%		\multirow{3}{*}{Replica} & PWCNet & - & -  & - & - \\ 
+%		& RAFT & - & -  & - & - \\ 
+%		& Our & - & -  & - & -  \\ 
+%		\hline
+%		\multirow{3}{*}{OmniPhoto} & PWCNet & - & -  & - & - \\ 
+%		& RAFT & - & -  & - & - \\ 
+%		& Our & - & -  & - & - \\ 
+%		\hline
+%	\end{tabular}
+%\end{table}
 
 
 
