--- a/doc/paper_draft/sections/3-approach.tex
+++ b/doc/paper_draft/sections/3-approach.tex
@@ -7,22 +7,30 @@
 	\label{fig:approach:pipeline}
 \end{figure}
 
-The method proposes a global rotation warping and tangent image based panoramic optical flow method to mitigate the equirectangular image's distortion and pixel's long span motion, meanwhile, the backbone perspective optical flow method can generalize to any  off-the-shelf optical flow method.
+Our method comprises a global rotation warping and tangent-image-based panoramic optical flow method to mitigate the distortions in equirectangular image and the large displacements of pixels.
+At the same time, our high-level approach generalises to any off-the-shelf perspective optical flow method, and thus will benefit from future improvements in optical flow methods.
+
 
 % overview method
-As shown in the overview diagram ~\cref{fig:approach:pipeline} our method compose of 3 steps:
-1) Estimate the panoramic optical flow $\bar{\mathcal{F}}_t$ from $I_{t}$ to ${I_{t+1}}$, then rotate the $I_{t+1}$ toward to $I_{t}$ with the $\bar{R}$ estimation form $\mathcal{F}_t$ to generate ${\bar{I}}_{t+1}$~\cref{sec:approach:warping};
-2) Estimate the panoramic optical flow ${\hat{\mathcal{F}}}_t$ from $I_{t}$ to ${\bar{I}}_{t+1}$ with cubemap optical flow method ~\cref{sec:approach:projstit}, then rotate the  ${\bar{I}}_{t+1}$ with the $\hat{R}$ estimated from ${\hat{\mathcal{F}}}_t$ to generate ${\hat{I}}_{t+1}$;
-3) Estimate $\tilde{\mathcal{F}}_t$ from $I_{t}$ to ${\hat{I}}_{t+1}$ with icosahedron optical flow method~\cref{sec:approach:warping}, then backward rotate warp the $\tilde{\mathcal{F}}_t$ with $\bar{R}$ and $\hat{R}$ to generate the panoramic optical flow $\mathcal{F}_t$.
-
+As shown in \cref{fig:approach:pipeline}, our method comprises three steps:
+%
+(1)~We estimate the optical flow $\bar{\mathcal{F}}_t$ from image $I_{t}$ to image ${I_{t+1}}$, followed by rotating $I_{t+1}$ towards to $I_{t}$ based on the rotation estimate $\bar{R}$ from the flow $\mathcal{F}_t$, which generates the warped ERP image ${\bar{I}}_{t+1}$ (see \cref{sec:approach:warping}).
+%
+(2)~We estimate the panoramic optical flow ${\hat{\mathcal{F}}}_t$ from $I_{t}$ to ${\bar{I}}_{t+1}$ based on cubemap projection optical flow (see \cref{sec:approach:projstit}), and then rotate the image ${\bar{I}}_{t+1}$ according to the rotation $\hat{R}$ estimated from the cubemap flow ${\hat{\mathcal{F}}}_t$ to generate ${\hat{I}}_{t+1}$.
+%
+(3)~We estimate the fine-scale flow $\tilde{\mathcal{F}}_t$ from $I_{t}$ to ${\hat{I}}_{t+1}$ using icosahedron projection optical flow (see \cref{sec:approach:warping}), then backward-rotate the fine-sacle flow $\tilde{\mathcal{F}}_t$ by rotations $\bar{R}$ and $\hat{R}$ to generate the final 360° optical flow $\mathcal{F}_t$.
+\looseness-1
 
 % 
-Comparing to the perspective image, the equirectangular image is continuous in all direction, in ~\cref{sec:approach:definition} we analyze and define the panoramic optical flow.
+Compared to perspective images, equirectangular images are continuous in all direction.
+In \cref{sec:approach:definition}, we analyse and define the panoramic optical flow.
 %
-To solve the equirectangular image distortion especially at the top and bottom, this method hires gnomonic projection~\cite{?} to project the equirectangular image to tangent image~\cite{?}, and base on cubemap and regular icosahedron vertex distribution to uniform sample the equirectangular image ~\cref{sec:approach:projstit} to solve the problem~\cref{sec:approach:projstit}.
+To solve the equirectangular image distortion, especially at the top and bottom, our method employs gnomonic projection to project the equirectangular image to tangent image~\cite{EderSLF2020}.
+We use cubemap and regular icosahedron faces to uniformly sample the equirectangular image to solve this problem (see \cref{sec:approach:projstit}).
 %
-At the same time, to compensate the tangent images narrow field of view, the global rotation operation is used on target image $I_{t+1}$ align to $I_t$ ~\cref{sec:approach:warping}
-But comparing to a panoramic image the tangent image's available viewport is small, not larger than $\pi$ and just $\frac{\pi}{2}$ in cubemap projection.
+However, compared to a panoramic image, a tangent image has a smaller field of view, not larger than $\pi$ and just $\frac{\pi}{2}$ for cubemap projection (without padding).
+To compensate for the tangent images' narrow field of view, the global rotation operation is used on the target image $I_{t+1}$ to align it with the source image $I_t$ (\cref{sec:approach:warping}).
+
 
 \subsection{Panoramic Optical Flow Definition}
 \label{sec:approach:definition}
